Agrega helpers. Remueve caracteres acentuadas de notificaciones SMS, y agrega bloque try/catch en emails para inquilinos

--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,9 @@
         }
     },
     "autoload": {
+        "files": [
+            "app/Modules/Poga/helpers.php"
+	],
         "psr-4": {
             "Raffles\\": "app/"
         },
